# computer-enhance

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  build.zig  build.zig.zon  flake.nix  output.data
asm/: Dockerfile  build_and_run.sh
src/: decoder.zig  executor.zig  main.zig  root.zig
src/haversine/: CMakeLists.txt  generator.cpp  generator.hpp  haversine.hpp  main.cpp  parser.hpp  processor.cpp  processor.hpp  reference_haversine.hpp
src/profiler/: profiler.hpp
src/sim8086/: CMakeLists.txt  decoder.cpp  decoder.hpp  main.cpp  simulator.cpp  simulator.hpp  table.cpp  table.hpp
src/sim8086/doc/: 8086.txt
src/sim8086/tests/: CMakeLists.txt  decoder_test.cpp  simulator_test.cpp
src/sim8086/tests/asm/: listing_54.asm
